@@ -1,0 +1,22 @@
+<?xml version='1.0' encoding='utf-8'?>
+<nrml xmlns:gml="http://www.opengis.net/gml"
+      xmlns="http://openquake.org/xmlns/nrml/0.5">
+
+<logicTree logicTreeID="lt1">
+  <logicTreeBranchingLevel branchingLevelID="bl1">
+    <logicTreeBranchSet uncertaintyType="sourceModel"
+						branchSetID="bs1">
+      <logicTreeBranch branchID="b1">
+		<uncertaintyModel>source_model_1.xml</uncertaintyModel>
+		<uncertaintyWeight>0.25</uncertaintyWeight>
+      </logicTreeBranch>
+      
+      <logicTreeBranch branchID="b2">
+		<uncertaintyModel>source_model_2.xml</uncertaintyModel>
+		<uncertaintyWeight>0.75</uncertaintyWeight>
+      </logicTreeBranch>
+	</logicTreeBranchSet>
+  </logicTreeBranchingLevel>
+</logicTree>
+
+</nrml>
