@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed a bug in classical_damage and added a master test for it
   * Fixed a segfault in the WebUI when exporting files with h5py >= 2.4
   * Added a command `oq dbserver` to start/stop the database server
   * The engine exports the hazard curves one file per IMT
